Añadido parámetros de búsqueda a la api de densidad

--- a/Borealis.Web/src/app/components/density-component/density.component.html
+++ b/Borealis.Web/src/app/components/density-component/density.component.html
@@ -2,7 +2,22 @@
 <ngx-charts-bar-vertical
   [view]="view"
   [scheme]="colorScheme"
-  [results]="single"
+  [results]="single2020"
+  [gradient]="gradient"
+  [xAxis]="showXAxis"
+  [yAxis]="showYAxis"
+  [legend]="showLegend"
+  [showXAxisLabel]="showXAxisLabel"
+  [showYAxisLabel]="showYAxisLabel"
+  [xAxisLabel]="xAxisLabel"
+  [yAxisLabel]="yAxisLabel"
+  (select)="onSelect($event)">
+</ngx-charts-bar-vertical>
+
+<ngx-charts-bar-vertical
+  [view]="view"
+  [scheme]="colorScheme"
+  [results]="single2019"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
