Añadidos componentes de la web, Añadido procesador de ficheros multihilo

--- a/Borealis.Web/src/app/components/app-component/app.component.html
+++ b/Borealis.Web/src/app/components/app-component/app.component.html
@@ -1,9 +1,3 @@
-<div>
-<router-outlet></router-outlet>
-
-<density-component>
-
-</density-component>
-
-
-</div>
+<section>
+    <router-outlet></router-outlet>
+</section>
