--- a/Borealis.Web/src/app/components/station-list-component/station-list.component.html
+++ b/Borealis.Web/src/app/components/station-list-component/station-list.component.html
@@ -1,3 +1,7 @@
-<ul>
-    <li *ngFor="let station in stations></li>
-</ul>
+<div>
+    <ul>
+        <li *ngFor="let station of stations">{{station.name}}</li>
+    </ul>
+
+    <station-form></station-form>
+</div>
