--- a/Borealis.Web/src/app/components/report-component/report.component.html
+++ b/Borealis.Web/src/app/components/report-component/report.component.html
@@ -29,8 +29,15 @@
         <input type="checkbox"/><label>Móstoles</label>
         <input type="checkbox"/><label>Fuenlabrada</label>
     </div>
+    <!-- If -->
+    <div>
+        <input type="checkbox"/><label>Madrid</label>
+        <input type="checkbox"/><label>Móstoles</label>
+        <input type="checkbox"/><label>Fuenlabrada</label>
+    </div>
     
     <button (click)="downloadReport()">Descargar informe</button>
+    <button (click)="downloadTownReport()">Descargar informe t</button>
 </div>
 
 
