--- a/Borealis.Web/src/styles.scss
+++ b/Borealis.Web/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css'; 
+
+html, body{
+    margin:0;
+    padding: 0;
+}
+
+.layout{
+    max-width: 1200px;
+}
+
+.view{
+    margin:20px 0 0 0;
+}
+
+.padding{
+    padding: 5px 10px;
+}
