--- a/Borealis.Web/src/app/views/holiday/holiday.scss
+++ b/Borealis.Web/src/app/views/holiday/holiday.scss
@@ -1,6 +1,12 @@
+.year{
+    display: grid;
+    grid-template-columns:repeat(5, 20%);
+    grid-gap: 10px;
+}
+
 .month{
     display: grid;
-    grid-template-columns:repeat(7, 20px);
+    grid-template-columns:repeat(7, auto);
     grid-template-rows: repeat(4, 20px);
     grid-gap: 10px;
     border: 1px solid #000;
