Añadido estilo para el listado de timelines

--- a/Borealis.Web/src/app/views/measurement/measurement.html
+++ b/Borealis.Web/src/app/views/measurement/measurement.html
@@ -19,7 +19,7 @@
 
         </div>
         <!-- Data -->
-        <div fxFlex=25 fxLayout="column" fxLayoutAlign="start stretch" class="data-container padding" name="asdf">
+        <div fxFlex=25 fxLayout="column" fxLayoutAlign="start stretch" class="data-container padding">
             <h2>Filter</h2>
             <mat-form-field appearance="fill" fxFlex>
                 <mat-label>Granularity</mat-label>
