--- a/Borealis.Web/src/app/views/holiday/holiday.scss
+++ b/Borealis.Web/src/app/views/holiday/holiday.scss
@@ -1,13 +1,57 @@
 .year{
     display: grid;
-    grid-template-columns:repeat(5, 20%);
+    grid-template-columns:repeat(5, 1fr);
     grid-gap: 10px;
 }
 
 .month{
+    padding: 10px;
     display: grid;
     grid-template-columns:repeat(7, auto);
-    grid-template-rows: repeat(4, 20px);
+    grid-template-rows: repeat(8, auto);
     grid-gap: 10px;
     border: 1px solid #000;
+}
+
+.month-header{
+    grid-column: 1/8;
+    font-size: 1.3em;
+}
+
+.local{
+    background: rgb(192, 237, 245);
+}
+
+.localcommunitary{
+    background: rgb(192, 240, 165);
+}
+
+.localnational{
+    background: rgb(235, 151, 200);
+}
+
+.localcommunitarynational{
+    background: rgb(121, 206, 228);
+}
+
+.communitary{
+    background: rgb(96, 230, 151);
+}
+
+.communitarynational{
+    background: rgb(148, 197, 238);
+}
+
+.national{
+    background: rgb(200, 226, 54);
+}
+
+.legend-container{
+    margin:10px 0;
+}
+
+.legend{
+    width: 30px;
+    height: 20px;
+    margin: 5px 10px 0 0;
 }
