Añadidos entornos diferenciados y mapa de estaciones con leaflet

--- a/Borealis.Web/src/app/components/station-form-dialog/station-form.html
+++ b/Borealis.Web/src/app/components/station-form-dialog/station-form.html
@@ -37,7 +37,7 @@
 
         <mat-form-field>
             <mat-label>Altitude</mat-label>
-            <input type="number" matInput placeholder="Station altitude" [(ngModel)]="station.longitude">
+            <input type="number" matInput placeholder="Station altitude" [(ngModel)]="station.altitude">
         </mat-form-field>
 
         <mat-form-field >
