--- a/Borealis.Web/src/app/views/station/station.html
+++ b/Borealis.Web/src/app/views/station/station.html
@@ -15,23 +15,34 @@
     <h2>Create station</h2>
     <station-form></station-form>
 </div> -->
-
 <section fxFlex fxLayout="column" fxLayoutAlign="start stretch">
     <h1>Stations</h1>
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between start">
-        <div fxFlex=70 fxLayout="column" fxLayoutAlign="start stretch" class="list">
-            <div *ngFor="let station of stations" class="list-item" fxLayout="row"
-                fxLayoutAlign="space-between center">
-                <span>{{station.id}} {{station.name}} {{station.address}}</span>
-                <div>
-                    <button mat-icon-button color="primary" (click)="openEditionDialog(station)">
-                        <i class="fal fa-edit"></i>
-                    </button>
-                </div>
-            </div>
-            <paginator *ngIf="status == statusEnum.loaded" [page]="paginatedItems.page"
-                [pageCount]="paginatedItems.pageCount" [perPage]="paginatedItems.perPage"
-                [perPageOptions]="[10, 20, 50, 100]" (onLoadPage)="reload($event)"></paginator>
+        <div fxFlex=70 fxLayout="column" fxLayoutAlign="start stretch">
+            <mat-tab-group dynamicHeight fxFlex>
+                <mat-tab label="Map">
+                    <div leaflet style="height: 800px; width:100%" [leafletOptions]="options"
+                        (leafletMapReady)="onMapReady($event)" [leafletLayers]="markers" noRightClick class="map-container">
+                    </div>
+                </mat-tab>
+                <mat-tab label="List">
+                    <div class="list">
+                        <div *ngFor="let station of stations" class="list-item" fxLayout="row"
+                            fxLayoutAlign="space-between center">
+                            <span>{{station.id}} {{station.name}} {{station.address}}</span>
+                            <div>
+                                <button mat-icon-button color="primary" (click)="openEditionDialog(station)">
+                                    <i class="fal fa-edit"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <paginator *ngIf="status == statusEnum.loaded" [page]="paginatedItems.page"
+                            [pageCount]="paginatedItems.pageCount" [perPage]="paginatedItems.perPage"
+                            [perPageOptions]="[10, 20, 50, 100]" (onLoadPage)="reload($event)"></paginator>
+                    </div>
+                </mat-tab>
+
+            </mat-tab-group>
         </div>
         <div fxFlex=25 fxLayout="column" fxLayoutAlign="start stretch" class="data-container padding">
             <h2>Filter</h2>
