--- a/Borealis.Web/src/styles.scss
+++ b/Borealis.Web/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'; 
+@import '~leaflet/dist/leaflet.css';
 
 html, body{
     margin:0;
